--- a/publication/bernabeu-tillman-2019/cite.bib
+++ b/publication/bernabeu-tillman-2019/cite.bib
@@ -1,17 +1,18 @@
 
-@article{gonzalezStartingVeryBeginning2025,
-  title = {Starting from the very beginning: {{Unraveling}} third language (L3) development with longitudinal data from artificial language learning and related epistemology},
-  author = {González Alonso, J. and Bernabeu, P. and Silva, G. and DeLuca, V. and Poch, C. and Ivanova, I. and Rothman, J.},
-  date = {2025-01-01},
-  journaltitle = {International Journal of Multilingualism},
-  shortjournal = {IJM},
-  volume = {1},
-  number = {22},
-  pages = {},
-  issn = {1479-0718, 1747-7530},
-  doi = {10.1080/14790718.2024.2415993},
-  url = {https://doi.org/10.1080/14790718.2024.2415993},
-  urldate = {2024-08-11},
-  abstract = {The burgeoning field of third language (L3) acquisition has increasingly focused on intermediate stages of language development, aiming to establish the groundwork for comprehensive models of L3 learning that encompass the entire developmental sequence. This article underscores the importance of a robust epistemological foundation, advocating for incremental knowledge building through longitudinal research. In the study presented here, we use artificial languages to investigate L3 acquisition from initial exposure with complete input control, factoring in individual differences in executive functions and history of bilingual exposure/engagement to assess the role of these variables in shaping learning trajectories and modulating cross-linguistic influence (CLI). This approach not only advances our understanding of L3 development under controlled conditions but also links L3 acquisition research to broader cognitive science inquiries.},
+@article{bernabeuMoreRefinedTypology2019,
+  title = {More Refined Typology and Design in Linguistic Relativity: {{The}} Case of Motion Event Encoding},
+  shorttitle = {More Refined Typology and Design in Linguistic Relativity},
+  author = {Bernabeu, P. and Tillman, R.},
+  date = {2019-12-31},
+  journaltitle = {Dutch Journal of Applied Linguistics},
+  shortjournal = {DuJAL},
+  volume = {8},
+  number = {2},
+  pages = {163--171},
+  issn = {2211-7245, 2211-7253},
+  doi = {10.1075/dujal.15019.ber},
+  url = {https://doi.org/10.1075/dujal.15019.ber},
+  urldate = {2022-06-11},
+  abstract = {Linguistic relativity is the influence of language on other realms of cognition. For instance, the way movement is expressed in a person’s native language may influence how they perceive movement. Motion event encoding (MEE) is usually framed as a typological dichotomy. Path-in-verb languages tend to encode path information within the verb (e.g., ‘leave’), whereas manner-in-verb languages encode manner (e.g., ‘jump’). The results of MEE-based linguistic relativity experiments range from no effect to effects on verbal and nonverbal cognition. Seeking a more definitive conclusion, we propose linguistic and experimental enhancements. First, we examine state-of-the-art typology, suggesting how a recent MEE classification across twenty languages (Verkerk, 2014) may enable more powerful analyses. Second, we review procedural challenges such as the influence of verbal thought and second-guessing in experiments. To tackle these challenges, we propose distinguishing verbal and nonverbal subgroups, and having enough filler items. Finally we exemplify this in an experimental design.},
   langid = {english}
 }
