--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/cite.bib
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/cite.bib
@@ -1,10 +1,17 @@
 
-@report{bernabeu2022b,
-  title = {Language and vision in conceptual processing: {{Multilevel}} analysis and statistical power},
-  author = {Bernabeu, P. and Lynott, D. and Connell, L.},
-  date = {2022},
-  institution = {{OSF}},
-  url = {https://osf.io/dnskh},
-  abstract = {Research has suggested that conceptual processing depends on both language-based and vision-based information. We tested this interplay at three levels of the experimental structure: individuals, words and tasks. To this end, we drew on three existing, large data sets that implemented the paradigms of semantic priming, semantic decision and lexical decision. We extended these data sets with measures of language-based and vision-based information, and analysed how the latter variables interacted with participants' vocabulary size and gender, and also with presentation speed in the semantic priming study. We performed the analysis using mixed-effects models that included a comprehensive array of fixed effects---including covariates---and random effects. First, we found that language-based information was more important than vision-based information. Second, in the semantic priming study---whose task required distinguishing between words and nonwords---, both language-based and vision-based information were more influential when words were presented faster. Third, a 'task-relevance advantage' was identified in higher-vocabulary participants. Specifically, in lexical decision, higher-vocabulary participants were more sensitive to language-based information than lower-vocabulary participants. In contrast, in semantic decision, higher-vocabulary participants were more sensitive to word concreteness. Fourth, we demonstrated the influence of the analytical method on the results. These findings support the interplay between language and vision in conceptual processing, and demonstrate the influence of measurement instruments on the results. Last, we estimated the sample size required to reliably investigate various effects. We found that 300 participants were sufficient to examine the effect of language-based information contained in words, whereas more than 1,000 participants were necessary to examine the effect of vision-based information and the interactions of both former variables with vocabulary size, gender and presentation speed. In conclusion, this power analysis reveals the need to increase sample sizes when conducting research on perceptual simulation and individual differences.},
+@article{gonzalezStartingVeryBeginning2025,
+  title = {Starting from the very beginning: {{Unraveling}} third language (L3) development with longitudinal data from artificial language learning and related epistemology},
+  author = {González Alonso, J. and Bernabeu, P. and Silva, G. and DeLuca, V. and Poch, C. and Ivanova, I. and Rothman, J.},
+  date = {2025-01-01},
+  journaltitle = {International Journal of Multilingualism},
+  shortjournal = {IJM},
+  volume = {1},
+  number = {22},
+  pages = {},
+  issn = {1479-0718, 1747-7530},
+  doi = {10.1080/14790718.2024.2415993},
+  url = {https://doi.org/10.1080/14790718.2024.2415993},
+  urldate = {2024-08-11},
+  abstract = {The burgeoning field of third language (L3) acquisition has increasingly focused on intermediate stages of language development, aiming to establish the groundwork for comprehensive models of L3 learning that encompass the entire developmental sequence. This article underscores the importance of a robust epistemological foundation, advocating for incremental knowledge building through longitudinal research. In the study presented here, we use artificial languages to investigate L3 acquisition from initial exposure with complete input control, factoring in individual differences in executive functions and history of bilingual exposure/engagement to assess the role of these variables in shaping learning trajectories and modulating cross-linguistic influence (CLI). This approach not only advances our understanding of L3 development under controlled conditions but also links L3 acquisition research to broader cognitive science inquiries.},
   langid = {english}
 }
