--- a/2025/prototype-workflow-for-semi-automatic-processing-of-speech-and-cospeech-gestures/index.Rmd
+++ b/2025/prototype-workflow-for-semi-automatic-processing-of-speech-and-cospeech-gestures/index.Rmd
@@ -31,7 +31,7 @@ Understanding the interplay between speech and gesture is crucial for linguistic
 
 For reference, the GitHub repository includes an [*ELAN* folder](https://github.com/pablobernabeu/prototype-process-pronouns-gestures/blob/main/ELAN) containing output from a traditional annotation process using the [ELAN program](https://archive.mpi.nl/tla/elan). Ultimately, the performance of the semi-automated prototype must be validated against manual annotations created using ELAN or a similar program. For reference, below is a plot of manually-annotated data for the alignment between demonstrative pronouns and pointing gestures (see [R code for the plot](https://github.com/pablobernabeu/prototype-process-pronouns-gestures/blob/main/ELAN/plot_alignment.R)).
 
-<img src='https://github.com/pablobernabeu/prototype-process-pronouns-gestures/blob/main/ELAN/plots/1_scatterplot.png?raw=true' alt='Plot of manually-annotated data for the alignment between demonstrative pronouns and pointing gestures.' style='margin-top:2px; margin-bottom:-2px;'></img>
+<img src='https://github.com/pablobernabeu/prototype-process-pronouns-gestures/blob/main/ELAN/plots/1_scatterplot.png?raw=true' alt='Plot of manually-annotated data for the alignment between demonstrative pronouns and pointing gestures.' style='margin-top:2px;'></img>
 
 ## How It Works: Running the Program
 
