--- a/2023/do-you-speak-a-scandinavian-language-s-and-english-but-no-other-languages-delta-i-et-eeg-eksperiment/index.en.Rmd
+++ b/2023/do-you-speak-a-scandinavian-language-s-and-english-but-no-other-languages-delta-i-et-eeg-eksperiment/index.en.Rmd
@@ -32,7 +32,7 @@ projects: []
 
 #### Ved å delta i vårt eksperiment og gjøre noen enkle oppgaver på en datamaskin, kan du bidra til forskning og tjene 250 kr i timen (gavekort). EEG er helt smertefritt.
 
-<div style = "background-image: url('images/Human_EEG_artefacts.png'); background-color: rgba(255,255,224,0.94); background-blend-mode: color-dodge; background-repeat: repeat; background-size: contain;">
+<div>
 
 ##### Eksperimentet foregår i Tromsø, ved UiT Norges Arktiske Universitet.
 
@@ -65,7 +65,7 @@ Dersom du oppfyller disse kriteriene og ønsker å delta, vennligst registrer de
 
 Tusen takk for din interesse i denne studien.
 
-<br>
+<div style = 'margin-top: 6%;'></div>
 
 </div>
 
