--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.en.Rmd
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.en.Rmd
@@ -43,7 +43,7 @@ url_source: ~
 url_video: ~
 links:
 - name: Preregistration
-  url: https://osf.io/6pxj4
+  url: https://osf.io/tjr54
 image:
   caption: ''
   focal_point: ''
@@ -53,7 +53,7 @@ slides: ''
 ---
 
 
-#### &nbsp; <i class="fa fa-file"></i>&nbsp; <a href='https://osf.io/6pxj4'>Read the preregistration</a>
+#### &nbsp; <i class="fa fa-file"></i>&nbsp; <a href='https://osf.io/tjr54'>Read the preregistration</a>
 
 ### Reference
 
