--- a/presentation/unpacking-erp-responses-in-artificial-language-learning/index.Rmd
+++ b/presentation/unpacking-erp-responses-in-artificial-language-learning/index.Rmd
@@ -35,7 +35,7 @@ address:
   postcode: ~
   country: ~
 summary: ~
-abstract: "Third language acquisition often involves morphosyntactic transfer from previously acquired languages. Research suggests that crosslinguistic influence follows systematic patterns, with attention playing a role in selecting the source of transfer. This study investigates morphosyntactic transfer longitudinally using artificial languages distributed between groups in two sites: Norway (Mini-Norwegian and Mini-English) and Spain (Mini-Spanish and Mini-English). <br> The study consists of six sessions. Session 1 assesses attention-related executive functions and language history. Session 2 begins with resting-state electroencephalography (EEG) to measure attentional skills, followed by training on gender agreement (present in Norwegian and Spanish). Sessions 3 and 4 introduce differential object marking (present in Spanish) and verb-object agreement (absent from all three languages), respectively. Each session includes vocabulary pre-training, grammar training, a behavioural test, and an EEG experiment measuring event-related potentials (ERPs) in response to grammatical violations in a grammaticality judgement task. Session 5 reassesses cognitive measures, and Session 6, after four months, tests retention of all grammatical properties. <br> This presentation will focus on preliminary results with a methodological emphasis. We will first examine accuracy in the grammaticality judgements, which was generally high, before analysing a consistent P600-like effect associated with a control violation involving misplaced definite articles (e.g., *thestreet*), relative to a grammatical condition (e.g., *the street*). This effect likely reflects increased attentional demands during syntactic processing. Notably, this control effect is observed across artificial languages, sessions and brain regions (with greater strength in medial and posterior regions), providing a reference point for evaluating the ERPs associated with the grammatical properties of interest. After demonstrating and discussing this comparison, forthcoming analyses will be outlined, and feedback will be welcome."
+abstract: "Third language acquisition often involves morphosyntactic transfer from previously acquired languages. Research suggests that crosslinguistic influence follows systematic patterns, with attention playing a role in selecting the source of transfer. This study investigates morphosyntactic transfer longitudinally using artificial languages distributed between groups in two sites: Norway (Mini-Norwegian and Mini-English) and Spain (Mini-Spanish and Mini-English). <br> The study consists of six sessions. Session 1 assesses attention-related executive functions and language history. Session 2 begins with resting-state electroencephalography (EEG) to measure attentional skills, followed by training on gender agreement (present in Norwegian and Spanish). Sessions 3 and 4 introduce differential object marking (present in Spanish) and verb-object agreement (absent from all three languages), respectively. Each session includes vocabulary pre-training, grammar training, a behavioural test, and an EEG experiment measuring event-related potentials (ERPs) in response to grammatical violations in a grammaticality judgement task. Session 5 reassesses cognitive measures, and Session 6, after four months, tests retention of all grammatical properties. <br> This presentation will focus on preliminary results with a methodological emphasis. We will first examine accuracy in the grammaticality judgements, which was generally high, before analysing a consistent P600-like effect associated with a control violation involving misplaced definite articles (e.g., *jestreet*), relative to a grammatical condition (e.g., *je street*). This effect likely reflects increased attentional demands during syntactic processing. Notably, this control effect is observed across artificial languages, sessions and brain regions (with greater strength in medial and posterior regions), providing a reference point for evaluating the ERPs associated with the grammatical properties of interest. After demonstrating and discussing this comparison, forthcoming analyses will be outlined, and feedback will be welcome."
 date_end: ~
 all_day: no
 publishDate: ~
@@ -61,7 +61,7 @@ projects: []
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
       <span style="color:#DBE6DA;"></span> PDF slides </h3></button></a> &nbsp; 
 
-<iframe src="https://www.slideshare.net/slideshow/embed_code/key/ur348cDVAKalBC?startSlide=1" width="700" height="394" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px;max-width: 100%;" allowfullscreen></iframe>
+<iframe src="https://www.slideshare.net/slideshow/embed_code/key/FWeoCwR0OycM7m?startSlide=1" width="700" height="394" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px;max-width: 100%;" allowfullscreen></iframe>
 
 
 ## Longer summary
