--- a/2025/4authors-year-doi-url/index.en.Rmd
+++ b/2025/4authors-year-doi-url/index.en.Rmd
@@ -54,7 +54,7 @@ We also recognise the many-to-many relationship between forms of knowledge and s
 
 ### Bibliography
 
-```
+```text
 1. Orben, A., & Przybylski, A. K. (2019). https://doi.org/10.1177/0956797619830329
 2. Hattan, C., & Kendeou, P. (2024). https://doi.org/10.1080/00461520.2024.2418048
 3. Mathers, S. J., Kolancali, P., Jelley, F., … Murphy, V. A. (2025). https://doi.org/10.1016/j.edurev.2025.100665
