Add initial HTML structure and content for "Investigating Object Orientation Effects Across 18 Languages" publication page

--- a/2025/4authors-year-doi-url/index.en.Rmd
+++ b/2025/4authors-year-doi-url/index.en.Rmd
@@ -24,27 +24,27 @@ projects: []
 ---
 
 
-The [4authors-year-doi-url CSL style](https://github.com/pablobernabeu/4authors-year-doi-url/blob/main/4authors-year-doi-url) is designed to be as compact as possible---ideal for posters, slides and abstracts---while retaining the three most critical pieces of information for a reference: **who** (authors), **when** (year) and **where** (DOI/URL). 
+The [4authors-year-doi-url CSL style](https://github.com/pablobernabeu/4authors-year-doi-url/blob/main/4authors-year-doi-url.csl) is designed to be as compact as possible---ideal for posters, slides and abstracts---while retaining the three most critical pieces of information for a reference: **who** (authors), **when** (year) and **where** (DOI/URL). 
 
 ## Features
 
-- In-Text Citations: Simple, superscripted numbers (e.g., <sup>1</sup>, <sup>2</sup>, <sup>3</sup>).
+- **In-Text Citations:** Simple, superscripted numbers (e.g., <sup>1</sup>, <sup>2</sup>, <sup>3</sup>).
 
-- Bibliography:
+- **Bibliography:**
 
   - Numeric: A numbered list, ordered by appearance in the text.
 
   - No Titles: Article and book titles are completely omitted to save space.
 
-- Authors:
+- **Authors:**
 
   - 1-3 Authors: All authors are listed.
 
   - 4+ Authors: Lists the first 3 authors, followed by an ellipsis (…) and the last author.
 
-- Year: The publication year is included in parentheses.
+- **Year:** The publication year is included in parentheses.
 
-- (DOI) URL: The reference ends with a DOI URL or another available URL.
+- **(DOI) URL:** The reference ends with a DOI URL or another available URL.
 
 ## Examples
 
