--- a/applications-and-dashboards/vtt-transcription-app/index.en.Rmd
+++ b/applications-and-dashboards/vtt-transcription-app/index.en.Rmd
@@ -61,7 +61,7 @@ When the caption file is uploaded to the web application, metadata such as times
 
 The data is only available to the user, and is deleted when the website is closed.
 
-## :globe_with_meridians: Web application
+## <i class="fa-solid fa-globe"></i> Web application
 
 The application can be used below, or it can be [opened separately here](https://pablo-bernabeu.shinyapps.io/VTT-Transcription-App).
 
